# safe_index

./: .travis.yml  Cargo.toml  LICENSE  README.md  changelog.md  readme.md
.github/workflows/: CI.yml
src/: lib.rs  map.rs
src/examples/: clients.rs  mod.rs
